--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,10 +42,5 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2"
-  },
-  "description": "fornt_end MPJ_Project H.H",
-  "main": "index.js",
-  "repository": "https://github.com/pashmakhj/MPJ_project/tree/main/front",
-  "author": "hooman honarvar",
-  "license": "MIT"
+  }
 }
