--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.username=hooman
+spring.datasource.password=8585honarvar
+spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.jpa.hibernate.ddl-auto=update
