--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#App
+
+server.port=3309
+
 spring.datasource.username=hooman
 spring.datasource.password=8585honarvar
 spring.datasource.url=jdbc:mysql://localhost:3306/users
