--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port=3309
 
 spring.datasource.username=hooman
 spring.datasource.password=8585honarvar
-spring.datasource.url=jdbc:mysql://localhost:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3306/users_MPJ
 spring.jpa.hibernate.ddl-auto=update
