--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.datasource.password=8585honarvar
 spring.datasource.url=jdbc:mysql://localhost:3306/users_MPJ
 spring.jpa.hibernate.ddl-auto=update
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 
