--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "react-hook-form/react-hook-form",
     "react-icons": "^4.10.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "5.0.1",
