--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "react-hook-form/react-hook-form",
     "react-icons": "^4.10.1",
-    "react-router-dom": "5.1.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.3",
     "web-vitals": "^2.1.4"
